--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,10 @@ r {
 	float: left;
 	margin-right: 20px;
 }
+a.curr{
+	background-color: var(--yellow-6);
+	color: var(--gray-9);
+}
 @media screen and (max-width: 700px) {
 	.profile {
 		width: 100%;
